# matrix

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  matrix.cpp
